tests/snapshots/tests_library_sample__basic.snap
---
source: tests/tests-library-sample.rs
expression: generate_output(diags)
---
./test-data/LibrarySample.sol:5:5
function StringUtils.nothing
  @param input is missing
  @return missing for unnamed return #1
